# Sandy

./: .gitignore  Procfile  README.md  requirements.txt
.github/workflows/: tests.yml
cloud/: sandy_agent.py  sandy_worker.py
cloud/app/: bootstrap.py  config.py
cloud/app/agent/: anomaly_detector.py  chroma_memory.py  conflict_resolution.py  context_builder.py  email_resolve.py  guest_usage.py  health_monitor.py  incident_tracker.py  ltm_crypto.py  memory.py  model_fallback.py  pending.py  proactive_comfort.py  proactive_context.py  (+5 more)
docs/: plan_productivity_native.md
firmware/brain-core/: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig.defaults
firmware/brain-core/main/: CMakeLists.txt  idf_component.yml  sandy_buzzer.c  sandy_ears.c  sandy_face.c  sandy_led.c  sandy_main.c  sandy_mic.c  sandy_motors.c  sandy_mqtt.c  sandy_nvs.c  sandy_ota.c  sandy_remote.c  sandy_sensor.c  sandy_servo.c  sandy_spktest.c  sandy_touch.c  sandy_voice.c  sandy_wifi.c  secrets.example.h
firmware/brain-core/main/include/: config.h  sandy_buzzer.h  sandy_ears.h  sandy_face.h  sandy_led.h  sandy_mic.h  sandy_motors.h  sandy_mqtt.h  sandy_nvs.h  sandy_ota.h  sandy_remote.h  sandy_sensor.h  sandy_servo.h  sandy_spktest.h  sandy_touch.h  sandy_types.h  sandy_voice.h  sandy_wifi.h
sandy/: config.h  sandy-faces.h  sandy.ino  sandy_buzzer.ino  sandy_face.ino  sandy_mic.ino  sandy_motors.ino  sandy_mqtt.ino  sandy_ota.ino  sandy_persist.ino  sandy_protos.h  sandy_sensor.ino  sandy_servo.ino  sandy_touch.ino  sandy_wifi.ino  secrets.example.h
scripts/: post_edit_hook.py  test_voice_ws.py  voice_laptop_client.py
sensor-node/ble-presence/: ble_presence.ino  config.h
sensor-node/heart-rate/: config.h  heart_rate.ino
tests/: test_build_monitoring.py  test_calendar_time_parser.py  test_conflict_callback_handler.py  test_conflict_resolution.py  test_cost_tool.py  test_date_parsing_integration.py  test_executor_action_routing.py  test_hardening.py  test_health_and_error_tracking.py  test_integration_e2e.py  test_metrics.py  test_multi_user_privacy.py  test_proactive_alerts.py  test_proactive_features.py  test_project_builder.py  test_project_builder_resume.py  test_project_builder_sigterm_resume.py  test_router_node.py  test_self_coding.py  test_self_coding_resume.py  test_self_coding_sigterm_resume.py  test_soul_vault.py  test_task_and_research_formatting.py
tools/: photo_to_rgb565.py
vision-core/: cam_capture.ino  cam_mqtt.ino  cam_ota.ino  cam_wifi.ino  config.h  esp32cam_Camera.ino  secrets.example.h
(+113 files in other folders)
