idf_component_register(
    SRCS
        "sandy_main.c"
        "sandy_wifi.c"
        "sandy_nvs.c"
        "sandy_servo.c"
        "sandy_buzzer.c"
        "sandy_sensor.c"
        "sandy_motors.c"
        "sandy_touch.c"
        "sandy_mic.c"
        "sandy_mqtt.c"
        "sandy_ota.c"
        "sandy_face.c"
        "sandy_voice.c"
        "sandy_ears.c"
        "sandy_spktest.c"
        "sandy_remote.c"
        "sandy_led.c"
    INCLUDE_DIRS
        "include"
        "."
    REQUIRES
        esp_wifi
        esp_event
        mqtt
        nvs_flash
        driver
        esp_driver_i2s
        esp_driver_gpio
        esp_driver_ledc
        esp_driver_spi
        esp_https_ota
        esp_http_server
        esp_netif
        esp_timer
        log
        freertos
        app_update
        esp_adc
        esp_system
        esp_lcd
        lvgl
        esp_websocket_client
        esp-tls
        mbedtls
        esp-sr
)
